<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.srtianxia.ble.MainActivity">
    <item
        android:id="@+id/action_scan"
        android:orderInCategory="100"
        android:title="@string/action_scan"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_write"
        android:orderInCategory="100"
        android:title="@string/action_write"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_disconnect"
        android:orderInCategory="100"
        android:title="@string/action_disconnect"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_connect_all"
        android:orderInCategory="100"
        android:title="@string/action_connect_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_post_uuid"
        android:orderInCategory="100"
        android:title="@string/action_post_uuid"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        />

</menu>
